# hospitalityai

./: .gitignore  README.md  read_all_files.sh
docs/: overview.md  (+16 more)
services/email-processor/: .env  .env.example  conftest.py  pyproject.toml
services/email-processor/adapters/claude/: classifier.py  extractor.py
services/email-processor/adapters/db/: connection.py  ledger.py  migrations.py  pms.py
services/email-processor/adapters/graph/: auth.py  inbound.py
services/email-processor/adapters/mews/: adapter.py  client.py  rate_plans.py
services/email-processor/adapters/postmark/: inbound.py  outbound.py
services/email-processor/app/: config.py  main.py
services/email-processor/domain/: models.py  ports.py
services/email-processor/domain/use_cases/: process_email.py
services/email-processor/scripts/: onboard_hotel.py  smoke_test_graph.py
services/email-processor/tests/adapters/: conftest.py  test_mews_adapter.py  test_mews_adapter_mock.py  test_mews_client.py
services/email-processor/tests/evals/: run_extraction.py
services/email-processor/tests/evals/fixtures/: README.md
services/email-processor/tests/evals/results/: 20260425_121340.csv  20260425_121340.json  20260425_123922.csv  20260425_123922.json  20260425_124848.csv  20260425_124848.json  20260425_141339.csv  20260425_141339.json  20260425_141737.csv  20260425_141737.json  20260425_142956.csv  20260425_142956.json  20260425_143401.csv  20260425_143401.json  20260425_143401.xlsx  (+1 more)
services/email-processor/tests/mews_mock/: server.py
services/email-processor/tests/unit/: test_process_email.py
(+117 files in other folders)
